fix: Rule114, Problem fare and prepare fare are reserved on some routes.
by codex
with Implemented and tested Android java.